# UnattendedInstaller

./: Cargo.toml  build.rs
src/: connection_error.rs  deposit.rs  file_handler.rs  installer_types.rs  main.rs  shared_folder_connection.rs
ui/: AppInfo.slint  Hs.slint  OwnTable.slint  ProgramCheckBox.slint  Spacer.slint  appwindow.slint
