[package]
name = "OrdenatechSetup"
version = "0.1.0"
authors = ["Garkatron <masitacarg@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5"
dirs = "5.0.1"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
futures = { version = "0.3.30", features = ["thread-pool"] }
rayon = "1.10.0"
async-std = "1.12.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
remotefs-smb = "0.2.1"
flate2 = "1.0.30"
tar = "0.4.40"
static_vcruntime = "2.0.0"


[build-dependencies]
slint-build = "1.5"
winres = "0.1.12"
static_vcruntime = "2.0"

[profile.release]
lto = true
codegen-units = 1
